--- a/tools/testing/selftests/ipc/Makefile
+++ b/tools/testing/selftests/ipc/Makefile
@@ -13,10 +13,7 @@ CFLAGS += -I../../../../usr/include/
 
 all:
 	$(CC) $(CFLAGS) msgque.c -o msgque_test
-
-TEST_PROGS := msgque_test
+TEST_GEN_PROGS := msgque_test
 
 include ../lib.mk
 
-clean:
-	rm -fr ./msgque_test
