selftests: enable O and KBUILD_OUTPUT
Signed-off-by: Bamvor Jian Zhang <bamvor.zhangjian@huawei.com>

--- a/tools/testing/selftests/vm/Makefile
+++ b/tools/testing/selftests/vm/Makefile
@@ -15,7 +15,7 @@ TEST_GEN_FILES += mlock-random-test
 
 all: $(TEST_GEN_FILES)
 
-userfaultfd: userfaultfd.c ../../../../usr/include/linux/kernel.h
+$(OUTPUT)userfaultfd: userfaultfd.c ../../../../usr/include/linux/kernel.h
 	$(CC) $(CFLAGS) -O2 -o $@ $< -lpthread
 
 mlock-random-test: mlock-random-test.c
